Minor Fixes + Fixed LightDark Mode and Logo

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   }
   
   .dark-mode-toggle {
-    position: absolute;
+    position: fixed;
     top: 1rem;
     right: 1rem;
     cursor: pointer;
@@ -27,6 +27,7 @@ body {
   .logo {
     width: 40px;
     height: 40px;
+    position: fixed;
   }
   
   /* Panel that holds the buttons */
